--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,16 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
+li {
+  list-style-type: none;
+}
+
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #707f9c;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
